--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
     "react-hook-form": "^7.43.9",
     "swiper": "^9.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
