--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-select": "^5.7.3",
+    "redis": "^4.6.7",
     "swiper": "^9.3.2",
     "typescript": "5.0.4",
     "yup": "^1.2.0"
