--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.43.9",
     "react-select": "^5.7.3",
     "redis": "^4.6.7",
+    "svg-captcha": "^1.4.0",
     "swiper": "^9.3.2",
     "typescript": "5.0.4",
     "yup": "^1.2.0"
