--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GITHUB_CLIENT_ID= 535b0505ed82227675cd
-GITHUB_SECRET= 440beb2cca6bf556c4f9231210771a4c7e5ddade 
+GITHUB_CLIENT_ID=535b0505ed82227675cd
+GITHUB_SECRET=440beb2cca6bf556c4f9231210771a4c7e5ddade
