--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
     "@mui/utils": "^5.13.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.7",
     "@types/js-cookie": "^3.0.3",
     "@types/node": "20.1.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
@@ -30,6 +32,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-redux": "^8.1.1",
     "react-select": "^5.7.3",
     "redis": "^4.6.7",
     "svg-captcha": "^1.4.0",
