--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "nextjs-all-in-one",
+  "name": "next.js-mui-starter",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:dev": "jest --watchAll"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -26,6 +28,7 @@
     "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "js-cookie": "^3.0.5",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -37,8 +40,12 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.4",
     "autoprefixer": "^10.4.14",
+    "jest": "^29.6.4",
     "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1"
   }
 }
