--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.7",
     "@types/js-cookie": "^3.0.3",
+    "@types/lodash": "^4.14.198",
     "@types/node": "20.1.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -29,6 +30,7 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
