--- a/package.json
+++ b/package.json
@@ -41,12 +41,18 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.4",
     "autoprefixer": "^10.4.14",
     "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
+    "msw": "^1.3.2",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "whatwg-fetch": "^3.6.19"
   }
 }
