--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:dev": "jest --watchAll"
+    "test:dev": "jest --watchAll",
+    "e2e": "playwright test"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -41,6 +42,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.39.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
@@ -49,6 +51,7 @@
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
     "msw": "^1.3.2",
+    "playwright": "^1.39.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "ts-jest": "^29.1.1",
