--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve":"json-server ./mock/todos.js --port=4000 --middlewares ./mock/middleware.js",
+    "serve": "json-server ./mock/todos.js --port=4000 --middlewares ./mock/middleware.js",
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
@@ -15,7 +15,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@faker-js/faker": "^8.0.2",
+    "@faker-js/faker": "^8.0.1",
     "@hookform/resolvers": "^3.1.1",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
@@ -41,7 +41,8 @@
     "react-redux": "^8.1.1",
     "react-select": "^5.7.3",
     "typescript": "5.0.4",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@playwright/test": "^1.39.0",
