--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint",
     "test": "jest",
     "test:dev": "jest --watchAll",
-    "e2e": "playwright test"
+    "e2e": "playwright test",
+    "codegen": "playwright codegen localhost:3000"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -45,7 +46,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@playwright/test": "^1.39.0",
+    "@playwright/test": "^1.40.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
@@ -54,7 +55,7 @@
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
     "msw": "^1.3.2",
-    "playwright": "^1.39.0",
+    "playwright": "^1.40.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "ts-jest": "^29.1.1",
