--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "next.js-mui-starter",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "serve": "json-server ./mock/todos.js --port=4000 --middlewares ./mock/middleware.js",
     "dev": "next dev --turbo",
@@ -57,6 +58,8 @@
     "msw": "^1.3.2",
     "playwright": "^1.40.0",
     "postcss": "^8.4.24",
+    "prettier": "3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.3.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
