--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "serve": "json-server ./mock/todos.js --port=4000 --middlewares ./mock/middleware.js",
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -15,22 +15,22 @@
     "codegen": "playwright codegen localhost:3000"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@faker-js/faker": "^8.0.1",
-    "@hookform/resolvers": "^3.1.1",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.2",
-    "@mui/utils": "^5.13.1",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@faker-js/faker": "^8.4.1",
+    "@hookform/resolvers": "^3.9.0",
+    "@mui/icons-material": "^5.16.4",
+    "@mui/material": "^5.16.4",
+    "@mui/utils": "^5.16.4",
     "@reduxjs/toolkit": "^1.9.5",
-    "@tanstack/react-query": "^4.29.7",
-    "@types/js-cookie": "^3.0.3",
-    "@types/lodash": "^4.14.198",
+    "@tanstack/react-query": "^4.29.19",
+    "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.7",
     "@types/node": "20.1.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
-    "@types/react-redux": "^7.1.25",
-    "axios": "^1.4.0",
+    "@types/react-redux": "^7.1.33",
+    "axios": "^1.7.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "js-cookie": "^3.0.5",
@@ -39,30 +39,31 @@
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.9",
+    "react-hook-form": "^7.52.1",
     "react-redux": "^8.1.1",
-    "react-select": "^5.7.3",
+    "react-select": "^5.8.0",
     "typescript": "5.0.4",
-    "yup": "^1.2.0",
-    "zod": "^3.22.4"
+    "yup": "^1.4.0",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "@playwright/test": "^1.40.0",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^29.5.4",
-    "autoprefixer": "^10.4.14",
-    "jest": "^29.6.4",
-    "jest-environment-jsdom": "^29.6.4",
+    "@playwright/test": "^1.45.2",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
+    "autoprefixer": "^10.4.19",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "msw": "^1.3.2",
-    "playwright": "^1.40.0",
-    "postcss": "^8.4.24",
+    "playwright": "^1.45.2",
+    "postcss": "^8.4.39",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.3.2",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "whatwg-fetch": "^3.6.19"
+    "tailwindcss": "^3.4.6",
+    "ts-jest": "^29.2.3",
+    "ts-node": "^10.9.2",
+    "whatwg-fetch": "^3.6.20"
   }
 }
