--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
+    "@mui/material-nextjs": "^5.16.4",
     "@mui/utils": "^5.16.4",
     "@tanstack/react-query": "^4.29.19",
     "@types/js-cookie": "^3.0.6",
