--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "codegen": "playwright codegen localhost:3000"
   },
   "dependencies": {
+    "@ag-grid-community/client-side-row-model": "^32.0.2",
+    "@ag-grid-community/core": "^32.0.2",
+    "@ag-grid-community/react": "^32.0.2",
+    "@ag-grid-community/styles": "^32.0.2",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@faker-js/faker": "^8.4.1",
