--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios": "^1.7.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "jotai": "^2.9.0",
     "js-cookie": "^3.0.5",
     "json-server": "^0.17.4",
     "lodash": "^4.17.21",
